--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,5 @@
-title: Blog Của Tôi
-description: Nơi tôi chia sẻ kiến thức và suy nghĩ
-theme: jekyll-theme-cayman
-url: "https://kaiversus.github.io" 
-# Hãy thay USERNAME_CUA_BAN bằng username thật của bạn
-
-plugins:
-  - jekyll-seo-tag
+title: Cyber Blog
+description: Hành trình khám phá vũ trụ
+url: "https://kaiversus.github.io"
+permalink: /:year/:month/:day/:title/
+markdown: kramdown
