--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 # _config.yml
-title: Kaiversus
+title: Dinh Thien Bao (Kaiversus)
+description: "Portfolio of Dinh Thien Bao (Kaiversus) - Security Researcher and CTF Player."
 url: "https://kaiversus.github.io"
 baseurl: ""
 
