--- a/_config.yml
+++ b/_config.yml
@@ -22,3 +22,10 @@ plugins:
   - jekyll-seo-tag
 markdown: kramdown
 highlighter: rouge
+
+defaults:
+  - scope:
+      path: ""
+      type: "writeups"
+    values:
+      layout: "writeup"
